src/test/ui/issues/issue-46472.stderr
error[E0597]: borrowed value does not live long enough (Ast)
  --> $DIR/issue-46472.rs:14:10
   |
LL |     &mut 4
   |          ^ temporary value does not live long enough
...
LL | }
   | - temporary value only lives until here
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 13:8...
  --> $DIR/issue-46472.rs:13:8
   |
LL | fn bar<'a>() -> &'a mut u32 {
   |        ^^

error[E0714]: temporary value dropped while borrowed (Mir)
  --> $DIR/issue-46472.rs:14:10
   |
LL |     &mut 4
   |          ^ creates a temporary which is freed while still in use
...
LL | }
   | - temporary value is freed at the end of this statement
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 13:8...
  --> $DIR/issue-46472.rs:13:8
   |
LL | fn bar<'a>() -> &'a mut u32 {
   |        ^^

error: aborting due to 2 previous errors

Some errors occurred: E0597, E0714.
For more information about an error, try `rustc --explain E0597`.
